# korea_elec_esp32

./: CMakeLists.txt  README.md  sdkconfig
.cache/clangd/index/: eeg_signal.h.7CC0AA36F8A7BDD2.idx  hello_world_main.c.A807FFB7F024943C.idx  main.c.425875C09EA07DD4.idx  signal_processing.c.06004DC5C2271509.idx  signal_processing.h.13B0ABF44A9DA7C0.idx
main/: Bpmpulse.cpp  CMakeLists.txt  EyeBlinkingChecker.cpp  Fulldowndetect.cpp  GetRawData.cpp  LeadOff.cpp  Uart.cpp  bandpower.c  filtering.c  filtering.h  fir_filter.c  main.c  main.cpp  mainTest.cpp  main_test.cpp  sfft.c  signal_processing.c  signal_processing.h
main/filter/: README.md  fir_filter.c  iir_filter.c  kal_filter.c
main/include/: Bpmpulse.h  EyeBlinkingChecker.h  Fulldowndetect.h  GetRawData.h  LeadOff.h  Uart.h  bandpower.h  eeg_signal.h  fir_filter.h  iir_filter.h  kal_filter.h  sfft.h  signal_processing.h
